--- a/css/pages/quem-somos.css
+++ b/css/pages/quem-somos.css
@@ -11,9 +11,8 @@ body {
     width: 100%; /* Garantir que o corpo ocupe 100% da largura */
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh; /* Garantir que o corpo ocupe toda a altura da tela */
 }
-
 
 /* Estilo da navbar */
 .custom-navbar {
@@ -163,7 +162,6 @@ main {
     flex-grow: 1; 
 }
 
-
 /* CARROSSEL */
 
 .carousel-inner {
@@ -273,4 +271,16 @@ main {
       margin: 0.5rem 0; /* Espaçamento entre os itens no mobile */
     }
   }
-  
+
+/* Estilo do footer para ocupar toda a largura e altura restante */
+.footer {
+    flex-grow: 0; /* Evita que o footer cresça e ocupe o espaço disponível */
+    background-color: #488B9B; /* Ou qualquer outra cor */
+    padding: 20px 0;
+    text-align: center;
+    margin-top: auto;
+}
+
+.footer-row{
+    width: 1280%;
+}
